# map-generator

./: .gitignore  AGENTS.md  LICENSE  README.md  conftest.py  pyproject.toml
.github/workflows/: deploy-pages.yml  release.yml  semver-release.yml
dcel_builder/: README.md  __init__.py  __main__.py  border_roughening.py  dcel.py  frontend_bundle.py  geometry.py  hierarchy.py  noise.py  raster_dcel.py  render.py  serializer.py  tree_loader.py
examples/atlantis/: zone_edges.json  zone_index.json  zone_tree_stats.json
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.lib.json  vite.config.ts  vite.lib.config.ts
frontend/public/: map_bundle.json
frontend/src/: App.tsx  MapView.tsx  SidePanel.tsx  animations.ts  bundle.ts  hover.ts  index.ts  palettes.ts  styles.css  textures.ts  theme.ts  types.ts
scripts/: clean_math_tree.py  demo_contour_guided_splits.py  demo_cutline_splits.py  demo_field_guided_splits.py  demo_roughened_borders.py  semver_release.py
tests/integration/: test_cli.py  test_pipeline.py
tests/unit/: test_border_roughening.py  test_dcel.py  test_demo_contour_guided_splits.py  test_demo_cutline_splits.py  test_demo_field_guided_splits.py  test_demo_roughened_borders.py  test_frontend_bundle.py  test_hierarchy.py  test_package_metadata.py  test_render.py  test_semver_release.py  test_serializer.py  test_tree_loader.py
